# light-desktop-item-edit

./: .gitignore  ChangeLog  INSTALL  Makefile.am  Makefile.in  PKGBUILD  configure  configure.ac  light-desktop-item-edit.in
m4/: ChangeLog
po/: ChangeLog  LINGUAS  Makefile  Makefile.in  POTFILES.in  light-desktop-item-edit.pot  pt_BR.po  ru.gmo  ru.po  simple-desktop-item-edit.po
src/: Makefile  Makefile.am  Makefile.in  __init__.py  desktop_edit.py  directory_edit.py  ini.py
ui/: Makefile.am  Makefile.in  desktop-item-edit.ui  directory-item-edit.ui
